--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Test GitHub Pages</title>
 </head>
 <body>
-    <h1>About Us</h1>
-    <p>This is the about page content.</p>
-    <p><a href="/">Go to Home Page</a></p>
+    <h1>Welcome to My GitHub Pages Test</h1>
+    <p>This is a simple test page.</p>
+    <a href="/home">Go to Home Page</a>
 </body>
 </html>
