--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-</head>
-<body>
-    <h1>Welcome to the Home Page</h1>
-    <p><a href="about">Go to About Page</a></p>
-</body>
-</html>
+---
+layout: default
+title: My Index Page
+---
+<h1>Welcome to the Index Page</h1>
+<p>This is the index page content.</p>
+<a href="/home">Go to Home</a>
