--- a/about.html
+++ b/about.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test GitHub Pages</title>
-</head>
-<body>
-    <h1>Welcome to My GitHub Pages Test</h1>
-    <p>This is a simple test page.</p>
-    <a href="/home">Go to Home Page</a>
-</body>
-</html>
+---
+layout: default
+title: About Us
+---
+
+<h1>About Us</h1>
+<p>This is the About Us page content.</p>
+<a href="/">Go to Index</a>
+<a href="/home">Go to Home</a>
