--- a/home.html
+++ b/home.html
@@ -1,7 +1,9 @@
 ---
 layout: default
-title: Home Page
+title: Home
 ---
+
 <h1>Welcome to the Home Page</h1>
 <p>This is the home page content.</p>
+<a href="/about">Go to About</a>
 <a href="/">Go to Index</a>
