--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
-title: My Index Page
+title: My Website
 ---
-<h1>Welcome to the Index Page</h1>
-<p>This is the index page content.</p>
+
+<h1>Welcome to My Website</h1>
+<p>This is the main index page content.</p>
 <a href="/home">Go to Home</a>
+<a href="/about">Go to About</a>
