--- a/about.html
+++ b/about.html
@@ -1,9 +1,13 @@
----
-layout: default
-title: About Us
----
-
-<h1>About Us</h1>
-<p>This is the About Us page content.</p>
-<a href="/">Go to Index</a>
-<a href="/home">Go to Home</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Page</title>
+</head>
+<body>
+    <h1>About Us</h1>
+    <p>This is the about page content.</p>
+    <p><a href="/home">Go to Home Page</a></p>
+</body>
+</html>
