--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
----
-layout: default
-title: My Website
----
-
-<h1>Welcome to My Website</h1>
-<p>This is the main index page content.</p>
-<a href="/home">Go to Home</a>
-<a href="/about">Go to About</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+</head>
+<body>
+    <h1>Welcome to the Home Page</h1>
+    <p><a href="about">Go to About Page</a></p>
+</body>
+</html>
